Bug 29037: Accessibility: OPAC links don't have sufficient contrast
This patch changes the colour of links on the OPAC
to improve the contrast ratio and make the link
text easier to read. This accessibility issue was
identified using the WebAIM WAVE accessibility
browser extension and Google Chrome's Lighthouse
tool.

To test:
1. Use an accessibility tool (e.g. Chrome's
   Lighthouse tool) to test the contrast ratio.
2. Confirm that some links (e.g. breadcrumb links
   and title links in search results) have
   insufficient contrast.
3. Apply the patch and rebuild the OPAC CSS:
   yarn build --view opac
4. Use the accessibility tool to confirm the
   contrast ratio meets minimum requirements
5. Check that the OPAC still looks ok after the
   changes.

--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/_common.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/_common.scss
@@ -19,7 +19,7 @@ $input-btn-focus-color: #85CA11;
 $input-btn-focus-box-shadow: 0 1px 1px $input-btn-focus-width $input-btn-focus-color;
 
 $color: #999999;
-$links: #0076B2;
+$links: #0074AD;
 $links-hover: #005580;
 $footer-height: 45px;
 
